--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,14 @@
     font-size: 16px;
 }
 
-h1 { 
-    font-size: 2rem;
-}
-
 p { 
     max-width: 75ch;
+}
+
+form label { 
+    display: block;
+}
+
+.container{
+    border: 1px solid hotpink
 }
