--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,208 @@
     font-size: 16px;
 }
 
+body { 
+    width: 100%;
+}
+
 p { 
     max-width: 75ch;
+    line-height: 1.4;
 }
 
-form label { 
-    display: block;
+nav ul { 
+    list-style-type: none;
+    height: 50px;
 }
 
-.container{
+section { 
+    padding: 5rem 5vw;
+}
+
+fieldset { 
+    max-width: 300px;
+    margin: 3rem auto;
+}
+
+figcaption { 
+    margin-top: 1rem;
+    text-align: center;
+}
+
+/* Layout */
+[class^='grid'] { 
+    display: grid;
+}
+
+[class^='flex'] { 
+    display: flex;
+}
+
+.grid-left-sidebar { 
+    grid-template-columns: 125px 1fr;
+}
+
+.grid-bio { 
+    grid-template-columns: 1fr 400px;
+    gap: 6rem;
+}
+
+.grid-6-columns { 
+    grid-template-columns: repeat(6, 1fr);
+    gap: 1.5rem;
+}
+
+.grid-2-columns { 
+    grid-template-columns: 1fr 1fr;
+}
+
+.grid-center { 
+    display: grid;
+    grid-template-columns: 1fr;
+    place-items: center;
+}
+
+.flex-spaced-around { 
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+}
+
+/* .container{
     border: 1px solid hotpink
+} */
+
+.logo { 
+    margin: auto;
+}
+
+.hero { 
+    height: 50vh;
+    text-align: center;
+}
+
+.block { 
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.bio-length-options { 
+    margin: 0 auto;
+}
+
+.bio-option-radios {
+    margin-top: 1rem;
+}
+
+.skills-text { 
+    position: sticky;
+    top: 40%;
+    margin: 0 auto;
+    height: fit-content;
+}
+
+.skills-images { 
+    grid-column-start: 2;
+    height: 100vh;
+    display: flex;
+}
+
+.skills-images figure { 
+    margin: auto;
+}
+
+.carousel { 
+    margin-top: 3rem;
+}
+
+.card { 
+    margin: 0 auto;
+    background-image: url(./img/phb.jpg);
+    background-size: cover;
+    background-position: right;
+    overflow: hidden;
+    width: 500px;
+    max-height: 500px;
+    border-radius: 1rem;
+    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
+    0px 5px 8px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 14px 0px rgba(0, 0, 0, 0.12);
+}
+
+.info {
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-color: #fff;
+    transform: translateY(100%)
+      translateY(-88px)
+      translateZ(0);
+    transition: transform 0.5s ease-out;
+  }
+
+.info:before {
+    z-index: -1;
+    display: block;
+    position: absolute;
+    content: ' ';
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-image: url(./img/phb.jpg);
+    filter: blur(10px);
+    background-size: cover;
+    background-position: right;
+    opacity: 0.25;
+    transform: translateY(-100%)
+        translateY(100px)
+        translateZ(0);
+    transition: transform 0.5s ease-out;
+}
+
+.card:hover .info,
+.card:hover .info:before {
+    transform: translateY(0) translateZ(0);
+}
+
+.project-title {
+    margin: 0;
+    padding: 24px;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.87);
+}
+
+.project-description {
+    margin: 0;
+    padding: 0 24px 24px;
+    line-height: 1.5;
+}
+
+.project-skills { 
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.project-skills img { 
+    width: 35px;
+}
+
+form > * {
+    display: block;
+    margin-top: .25rem;
+}
+
+input[type=text] { 
+    width: 100%;
+    height: 1.2rem;
+}
+
+textarea { 
+    width: 100%;
+    height: 5rem;
+    resize: none;
+}
+
+input[type=submit] { 
+    float: right;
 }
