Styled the navbar to be fixed and the links to have a hover effect

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,10 @@
     --fs-l: clamp(1rem, 3vw + 1rem, 3rem);
     --fs-600: 2.25rem;
     --fs-500: 1.75rem;
-    --fs-400: 1rem
+    --fs-400: 1.25rem;
+
+    --clr-primary: #000;
+    --clr-secondary: #fff;
 }
 
 body { 
@@ -22,7 +25,9 @@ h1 {
 
 h2 { 
     font-family: var(--ff-body);
-    font-size: var(--fs-l)
+    font-size: var(--fs-l);
+    text-transform: uppercase;
+
 }
 
 h3 { 
@@ -41,9 +46,54 @@ label, input, p {
     line-height: 1.4;
 }
 
+nav { 
+    position: fixed;
+    width: 100%;
+    background-color: var(--clr-secondary);
+    box-shadow: 0 2px 15px var(--clr-primary);
+    z-index: 1;
+}
+
 nav ul { 
     list-style-type: none;
     height: 50px;
+}
+
+.nav-button {
+    font-family: var(--ff-body);
+    font-size: var(--fs-400);
+    text-decoration: none;
+    position:relative;
+    text-transform: uppercase;
+    color: var(--clr-primary);
+}
+
+.nav-button::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0%;
+    background-color: black;
+    height: 2px;
+    transition: 200ms;
+}
+
+.nav-button::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 0%;
+    background-color: black;
+    height: 2px;
+    transition: 200ms;
+}
+
+.nav-button:hover,
+.nav-button:hover::before,
+.nav-button:hover::after { 
+    width: 50%;
 }
 
 section { 
