--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@ h2 {
     font-family: var(--ff-body);
     font-size: var(--fs-l);
     text-transform: uppercase;
-
 }
 
 h3 { 
@@ -44,7 +43,7 @@ h4 {
     font-size: var(--fs-500);
 }
 
-label, input, p { 
+figcaption, label, input, p { 
     font-family: var(--ff-body);
     font-size: var(--fs-400);
     max-width: clamp(45ch, 50%, 75ch);
@@ -215,8 +214,55 @@ figcaption {
     gap: 2rem
 }
 
-.skills-images figure { 
-    height: auto;
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(100%);
+    transition: all 900ms ease-out;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+}
+
+.icon:nth-child(2) {
+    transition-delay: 300ms;
+}
+
+.icon:nth-child(3) {
+    transition-delay: 600ms;
+}
+
+.icon a img { 
+    animation: shake 11s ease-in 1s infinite;
+}
+
+@keyframes shake { 
+    0% { 
+        transform: translate(0);
+    }
+    2%, 4%, 6%, 8% {
+        transform: translate(.6em);
+    }
+    1%, 3%, 5% {
+        transform: translate(-.2rem);
+    }
+    7%, 10% {
+        transform: translate(0);
+    }
+}
+
+.skills-images figure figcaption { 
+    opacity: 0;
+    transform: translateY(-2rem);
+    transition: all 200ms;
+}
+
+.skills-images figure:hover figcaption { 
+    transform: translateY(0);
+    opacity: 1;
 }
 
 .skills-images figure img { 
