--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,8 @@ html {
 }
 
 body { 
-    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 h1 { 
@@ -59,7 +60,7 @@ nav {
     width: 100%;
     background-color: var(--clr-secondary);
     box-shadow: 0 2px 15px var(--clr-primary);
-    z-index: 1;
+    z-index: 2;
 }
 
 nav ul { 
@@ -199,7 +200,56 @@ figcaption {
 .profile-photo { 
     width:100%;
     border-radius: 10%;
+    /* max-height: 580px; */
 }
+/* Tilt Effect */
+.tilt-box-wrap {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transition: all 0.6s ease-out;
+    perspective: 1000px;
+}
+.tilt-box-wrap:hover { 
+    transition: all .3s ease-out linear;
+    transform: scale(1.05);
+}
+.tilt-box {
+    width: 100%;
+    height: 100%;
+    max-height: 580px;
+    transition: all 0.6s ease-out;
+    transform: rotateX(0deg) rotateY(0deg);
+    perspective: 1000px;
+    transform-style: preserve-3d;
+}
+.t_over {
+    width: 33.333%;
+    height: 33.333%;
+    position: absolute;
+    z-index: 1;
+}
+.t_over:nth-child(1) { left: 0; top: 0 }
+.t_over:nth-child(2) { left: 33.333%; top: 0 }
+.t_over:nth-child(3) { left: 66.666%; top: 0 }
+.t_over:nth-child(4) { left: 0; top: 33.333% }
+.t_over:nth-child(5) { left: 33.333%; top: 33.333% }
+.t_over:nth-child(6) { left: 66.666%; top: 33.333% }
+.t_over:nth-child(7) { left: 0; top: 66.666% }
+.t_over:nth-child(8) { left: 33.333%; top: 66.666% }
+.t_over:nth-child(9) { left: 66.666%; top: 66.666% }
+
+.t_over:nth-child(1):hover ~ .tilt-box { transform: rotateX(-10deg) rotateY(10deg); }
+.t_over:nth-child(2):hover ~ .tilt-box { transform: rotateX(-10deg) rotateY(0); }
+.t_over:nth-child(3):hover ~ .tilt-box { transform: rotateX(-10deg) rotateY(-10deg); }
+.t_over:nth-child(4):hover ~ .tilt-box { transform: rotateX(0) rotateY(10deg); }
+.t_over:nth-child(5):hover ~ .tilt-box { transform: rotateX(0) rotateY(0); }
+.t_over:nth-child(6):hover ~ .tilt-box { transform: rotateX(0) rotateY(-10deg); }
+.t_over:nth-child(7):hover ~ .tilt-box { transform: rotateX(10deg) rotateY(10deg); }
+.t_over:nth-child(8):hover ~ .tilt-box { transform: rotateX(10deg) rotateY(0); }
+.t_over:nth-child(9):hover ~ .tilt-box { transform: rotateX(10deg) rotateY(-10deg); }
+
+/* End of tilt effect */
 
 .skills-text { 
     position: sticky;
@@ -210,14 +260,17 @@ figcaption {
 
 .skills-images { 
     grid-column-start: 2;
+    display: grid;
+    place-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(10px, 70px));
     height: 100vh;
-    gap: 2rem
+    gap: 6rem
 }
 
 .hidden {
     opacity: 0;
     filter: blur(5px);
-    transform: translateX(100%);
+    transform: translateX(-100%);
     transition: all 900ms ease-out;
 }
 
@@ -225,6 +278,10 @@ figcaption {
     opacity: 1;
     filter: blur(0);
     transform: translateX(0);
+}
+
+.icon { 
+    margin: 0 auto;
 }
 
 .icon:nth-child(2) {
@@ -244,10 +301,10 @@ figcaption {
         transform: translate(0);
     }
     2%, 4%, 6%, 8% {
-        transform: translate(.6em);
+        transform: translate(.2em);
     }
     1%, 3%, 5% {
-        transform: translate(-.2rem);
+        transform: translate(-.1rem);
     }
     7%, 10% {
         transform: translate(0);
@@ -266,7 +323,7 @@ figcaption {
 }
 
 .skills-images figure img { 
-    width: clamp(10px, 12vw, 125px);
+    width: clamp(10px, 12vw, 70px);
 }
 
 .carousel { 
@@ -468,6 +525,14 @@ input[type=submit] {
         width: 200px;
         margin: 0 auto;
     }
+
+    /* Recenter profile image for tilt effect */
+
+    .tilt-box-wrap { 
+        display: flex;
+    } 
+
+    /* End of recenter profile image for tilt effect */
 
     .skills-text { 
         text-align: center;
