Implement contact form functionality. Submitting the form will send an email and redirect the user to a thankyou page that shoots confetti. From this page, the user can navigate back to the main page or any section of the site or make more confetti

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,10 @@ figcaption, label, textarea, input, p {
     line-height: 1.4;
 }
 
+input, textarea { 
+    margin-bottom: 2rem;
+}
+
 .small-screen-nav { 
     display: none;
 }
