--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,16 @@
 
     --clr-primary: #000;
     --clr-secondary: #fff;
+
+    --gradient: linear-gradient(
+        45deg,
+        #845EC2,
+        #D65DB1,
+        #FF6F91,
+        #FF9671,
+        #FFC75F,
+        #F9F871
+    );
 }
 
 html {
@@ -216,6 +226,44 @@ figcaption {
     padding-right: 0;
     height: 50vh;
     text-align: center;
+    user-select: none;
+}
+
+.rainbow-letter { 
+    display: inline-block;
+    background-image: var(--gradient);
+    background-clip: text;
+    -webkit-background-clip: text;
+    background-size: 300%;
+    background-position: left;
+    /* animation: move-gradient 1.5s infinite alternate; */
+    
+}
+
+.rainbow-letter:hover,
+.rainbow-letter:focus {
+    color: transparent;
+    background-position: right;
+    
+}
+
+.animate { 
+    animation: pop 1s, move-gradient .8s;
+}
+
+@keyframes move-gradient {
+    0% { background-position: left; }
+    100% { background-position: right; }
+}
+
+@keyframes pop { 
+    from {transform: scale3d(1, 1, 1);}
+    30% {transform: scale3d(1.25, 0.75, 1);}
+    40% {transform: scale3d(0.75, 1.25, 1);}
+    50% {transform: scale3d(1.15, 0.85, 1);}
+    65% {transform: scale3d(0.95, 1.05, 1);}
+    75% {transform: scale3d(1.05, 0.95, 1);}
+    to {transform: scale3d(1, 1, 1);}
 }
 
 .block-center { 
