--- a/styles.css
+++ b/styles.css
@@ -562,7 +562,7 @@ input[type=submit] {
 
     .profile-photo {
         max-width: 400px;
-        margin: 0 auto;
+        margin: 0 auto 1.2rem;
     }
 
 
