--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,6 @@ html {
 
 body { 
     max-width: 100%;
-    padding-bottom: 5rem;
 }
 
 h1 { 
@@ -545,6 +544,10 @@ textarea {
 
 input[type=submit] { 
     float: right;
+}
+
+.page-end { 
+    padding-bottom: 20rem;
 }
 
 @media only screen and (max-width: 810px) {
