--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,22 @@ body {
     max-width: 100%;
 }
 
+body::-webkit-scrollbar { 
+    width: .75rem;
+}
+
+body::-webkit-scrollbar-track { 
+    border-radius: 100vw;
+    margin-top: 50px;
+    margin-bottom: .5em;
+}
+
+body::-webkit-scrollbar-thumb { 
+    background: var(--clr-primary);
+    border-radius: 100vw;
+    transition: all 1s;
+}
+
 h1 { 
     font-family: var(--ff-header);
     font-size: var(--fs-xl);
@@ -447,84 +463,44 @@ figcaption {
         transform: translate(0);
     }
 }
+/* Project Cards */
 
-.carousel { 
-    margin-top: 3rem;
+.card-container {
+    display: grid;
+    place-items: center;
+    margin-top: 5rem;
 }
 
-.card { 
-    margin: 0 auto;
-    background-image: url(./img/phb.jpg);
-    background-size: cover;
-    background-position: right;
-    overflow: hidden;
-    width: 300px;
-    max-height: 500px;
-    border-radius: 1rem;
-    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
-    0px 5px 8px 0px rgba(0, 0, 0, 0.14),
-    0px 1px 14px 0px rgba(0, 0, 0, 0.12);
-}
-
-.info {
-    position: relative;
-    width: 100%;
-    height: 500px;
-    background-color: #fff;
-    transform: translateY(100%)
-      translateY(-88px)
-      translateZ(0);
-    transition: transform 0.5s ease-out;
-  }
-
-.info:before {
-    z-index: -1;
-    display: block;
-    position: absolute;
-    content: ' ';
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    background-image: url(./img/phb.jpg);
-    filter: blur(10px);
-    background-size: cover;
-    background-position: right;
-    opacity: 0.25;
-    transform: translateY(-100%)
-        translateY(100px)
-        translateZ(0);
-    transition: transform 0.5s ease-out;
-}
-
-.card:hover .info,
-.card:hover .info:before {
-    transform: translateY(0) translateZ(0);
-}
-
-.project-title {
-    margin: 0;
-    padding: 24px;
-    min-height: 3rem;
-    line-height: 1;
-    color: rgba(0, 0, 0, 0.87);
-}
-
-.project-description {
-    margin: 0;
-    padding: 0 24px 24px;
-    line-height: 1.5;
-}
-
-.project-skills { 
+.card {
+    width: clamp(24ch, 50%, 46ch);
     display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: all 500ms;
     gap: 1rem;
-    align-items: center;
-    padding: 0 24px 24px;
 }
 
-.project-skills img { 
-    width: 35px;
+.card:hover { 
+    transform: scale(1.04);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
+.card-visual {
+    aspect-ratio: 4 / 3;
+    width: 100%;
+}
+
+.card-skills {
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+}
+
+.card-skill-icon {
+    width: 100%;
+}
+
 
 form > * {
     display: block;
