edit style of strong to be bold and remove surname from bio

--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,10 @@ p {
     max-width: clamp(45ch, 100%, 75ch);
 }
 
+strong { 
+    font-weight: bold;
+}
+
 figcaption, label, textarea, input, legend, p { 
     font-family: var(--ff-body);
     font-size: var(--fs-400);
